package Mundial;

public class Grupo extends EtapaMundial{

}
