package Mundial;

public class Llave extends EtapaMundial {
}
